2009-03-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve compatibility with Ubuntu.
	
	* bin/cce.in: Add slrt.o before -lsos in link flags, since slrt
	can depend on -lsos and Ubuntu has strict linker semantics.

	* configure.ac: Lower Autoconf requirement to 2.61, which is
	reasonably recent (later than 2.60) and pleases Ubuntu users.

	* doc/requirements.txt: Document extra requirements for building
	documentation, with highlight on Debian/Ubuntu package names.

	* bin/slt.in, 
	* bin/timeout.in: Print a newline before the "interrupted by
	signal" message, to clean up terminal.

2009-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Bug fixes thanks to testing: improve portability with systems
	where /bin/sh is not bash (e.g. Ubuntu). Handle signals better
	during testing.
	
	* bin/slt: Rename to...	
	* bin/slt.in: Here. Announce dependency on bash. Better signal
	handling.
	
	* bin/timeout: Rename to...	
	* bin/timeout.in: Here. Announce dependency on bash. Better signal
	handling.
	
	* bin/Makefile.am,
	* doc/Makefile.am,
	* tests.mk: Update accordingly.

2009-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Bug fixes thanks to testing.
	
	* bin/spp: Recognize cvt*, itof* and ftoi* instructions as
	instructions that overwrite their 2nd parameter (like "mov"). This
	avoids unneeded swch annotations. Recognize "blbc" as branch
	instruction.

	* lib/svplib/io.sl: Use "const char*" instead of "char*" to please
	the compiler.
	
2009-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve compiler interface: allow linking without startup object
	or standard library.
	
	* bin/slc.in: Handle -nostdlib, -nodefaultlibs,
	-nostartfiles. Document them.
	
	* bin/cce.in: Use variables slc_use_slrt and slc_use_slos provided
	by slc.

	* lib/seqc.mk,
	* lib/mtalpha.mk,
	* lib/ptl.mk: Use -nostdlib where appropriate.

	* bin/cce.in: Require slrt.o when -nostartfiles is not specified.

2009-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix handling of long argument lists.
